--- a/MCP-Net-USG-Arthritis.ipynb
+++ b/MCP-Net-USG-Arthritis.ipynb
@@ -45,22 +45,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "e2jCavItxV4W",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a9da0a27-8cc1-46e3-c7e6-8f81f7a1171c"
+        "id": "e2jCavItxV4W"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-3316104698.py:19: DeprecationWarning: 'mode' parameter is deprecated and will be removed in Pillow 13 (2026-10-15)\n",
-            "  img= Image.fromarray(img,\"RGB\")\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#mcp_Metacarpophalangeal joint\n",
         "path = \"/content/drive/MyDrive/MCP_arthritis\"\n",
@@ -85,8 +72,7 @@
         "  img= img.resize((224,224))\n",
         "  img= np.array(img)\n",
         "  RA_MCP.append(img)\n",
-        "  RA_MCP_label.append(0)\n",
-        "\n"
+        "  RA_MCP_label.append(0)"
       ]
     },
     {
@@ -103,7 +89,7 @@
         "RAmcp = os.path.join(base_dir, 'MCP')\n",
         "os.mkdir(RAmcp)\n",
         "Normalpatient = os.path.join(base_dir, 'Normal')\n",
-        "os.mkdir(Normalpatient)\n"
+        "os.mkdir(Normalpatient)"
       ]
     },
     {
@@ -136,9 +122,7 @@
         "        # destination path to image\n",
         "        dst = os.path.join(base_dir2, image)\n",
         "        # copy the image from the source to the destination\n",
-        "        shutil.copyfile(src, dst)\n",
-        "\n",
-        "\n"
+        "        shutil.copyfile(src, dst)"
       ]
     },
     {
@@ -235,7 +219,7 @@
         "        cv2.imwrite(output_path, augmented_image)\n",
         "        num_generated_images += 1\n",
         "\n",
-        "print(f\"Generated {num_generated_images} augmented images.\")\n"
+        "print(f\"Generated {num_generated_images} augmented images.\")"
       ]
     },
     {
@@ -296,7 +280,7 @@
         "        cv2.imwrite(output_path, augmented_image)\n",
         "        num_generated_images += 1\n",
         "\n",
-        "print(f\"Generated {num_generated_images} augmented images.\")\n"
+        "print(f\"Generated {num_generated_images} augmented images.\")"
       ]
     },
     {
@@ -324,7 +308,7 @@
         "mcp1 = os.path.join(base_dir, 'MCP')\n",
         "os.mkdir(mcp1)\n",
         "MCP2 = os.path.join(base_dir, 'NORMAL')\n",
-        "os.mkdir(MCP2)\n"
+        "os.mkdir(MCP2)"
       ]
     },
     {
@@ -357,7 +341,7 @@
         "# Transfer images from source_folder to destination_folder\n",
         "transfer_images(source_folder, destination_folder)\n",
         "\n",
-        "print(\"Images transferred from\", source_folder, \"to\", destination_folder)\n"
+        "print(\"Images transferred from\", source_folder, \"to\", destination_folder)"
       ]
     },
     {
@@ -390,7 +374,7 @@
         "# Transfer images from source_folder to destination_folder\n",
         "transfer_images(source_folder, destination_folder)\n",
         "\n",
-        "print(\"Images transferred from\", source_folder, \"to\", destination_folder)\n"
+        "print(\"Images transferred from\", source_folder, \"to\", destination_folder)"
       ]
     },
     {
@@ -429,8 +413,7 @@
       "outputs": [],
       "source": [
         "import splitfolders\n",
-        "splitfolders.ratio('/content/drive/MyDrive/Arthritis', output='new_arthritis', seed=1337, ratio=(0.75, 0.1, 0.15))\n",
-        "\n"
+        "splitfolders.ratio('/content/drive/MyDrive/Arthritis', output='new_arthritis', seed=1337, ratio=(0.75, 0.1, 0.15))"
       ]
     },
     {
@@ -443,13 +426,6 @@
       "source": [
         "!zip -r '/content/drive/MyDrive/USG_arth.zip' '/content/new_arthritis'"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xg-VSL6jROoE"
-      },
-      "source": []
     },
     {
       "cell_type": "code",
@@ -501,7 +477,7 @@
       },
       "outputs": [],
       "source": [
-        "pip install scikit-learn\n"
+        "pip install scikit-learn"
       ]
     },
     {
@@ -570,7 +546,7 @@
         "\n",
         "print(f\"Training set: {len(train_files)} images\")\n",
         "print(f\"Validation set: {len(val_files)} images\")\n",
-        "print(f\"Test set: {len(test_files)} images\")\n"
+        "print(f\"Test set: {len(test_files)} images\")"
       ]
     },
     {
@@ -631,8 +607,7 @@
         "\n",
         "print(f\"Training set: {len(train_files)} images\")\n",
         "print(f\"Validation set: {len(val_files)} images\")\n",
-        "print(f\"Test set: {len(test_files)} images\")\n",
-        "\n"
+        "print(f\"Test set: {len(test_files)} images\")"
       ]
     },
     {
@@ -643,7 +618,7 @@
       },
       "outputs": [],
       "source": [
-        "pip install tensorflow\n"
+        "pip install tensorflow"
       ]
     },
     {
@@ -899,13 +874,13 @@
         "print(f\"Test accuracy: {test_acc}\")\n",
         "\n",
         "# Save the model\n",
-        "model.save('resnet_with_attention.h5')\n"
+        "model.save('resnet_with_attention.h5')"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "model.summary()\n"
+        "model.summary()"
       ],
       "metadata": {
         "colab": {
@@ -1065,7 +1040,7 @@
         "    heatmap = tf.maximum(heatmap, 0)\n",
         "    heatmap /= tf.reduce_max(heatmap)  # Normalize to [0, 1]\n",
         "\n",
-        "    return heatmap.numpy()\n"
+        "    return heatmap.numpy()"
       ],
       "metadata": {
         "id": "5WocISi5-J7a"
@@ -1082,7 +1057,7 @@
         "img = image.load_img(img_path, target_size=(224, 224))  # Resize according to your model's input size\n",
         "img_array = image.img_to_array(img)\n",
         "img_array = np.expand_dims(img_array, axis=0)  # Add batch dimension\n",
-        "img_array = img_array / 255.0  # Normalize if your model expects it\n"
+        "img_array = img_array / 255.0  # Normalize if your model expects it"
       ],
       "metadata": {
         "id": "MvVmEI3-AWgc"
@@ -1097,7 +1072,7 @@
         "layer_name = 'conv2d_1'  # Change this to the last convolutional layer in your model\n",
         "\n",
         "# Get the Grad-CAM heatmap\n",
-        "heatmap = get_gradcam_heatmap(model, img_array, layer_name)\n"
+        "heatmap = get_gradcam_heatmap(model, img_array, layer_name)"
       ],
       "metadata": {
         "id": "aOk58oeI-OlW"
@@ -1130,8 +1105,7 @@
         "plt.imshow(superimposed_img)\n",
         "plt.title('Superimposed Image')\n",
         "plt.axis('off')\n",
-        "\n",
-        "plt.show()\n"
+        "plt.show()"
       ],
       "metadata": {
         "id": "GII-s-Qv-RfI"
